--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.1",
     "bootstrap": "^4.4.1",
+    "emailjs-com": "^2.4.1",
     "gatsby": "^2.19.43",
     "gatsby-image": "^2.2.43",
     "gatsby-plugin-manifest": "^2.2.47",
@@ -22,6 +23,7 @@
     "gatsby-transformer-remark": "^2.6.58",
     "gatsby-transformer-sharp": "^2.3.18",
     "google-map-react": "^1.1.6",
+    "google-maps-react": "^2.0.2",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
@@ -29,6 +31,7 @@
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
     "react-scrollspy": "^3.4.2",
+    "react-toastr": "^3.0.0",
     "sal.js": "^0.7.4"
   },
   "devDependencies": {
@@ -48,7 +51,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/Arminbusatlic72/neologic"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
