--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-manifest": "^2.2.47",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.1.23",
+    "gatsby-plugin-react-leaflet": "^2.0.13",
     "gatsby-plugin-sass": "^2.1.30",
     "gatsby-plugin-scroll-reveal": "0.0.6",
     "gatsby-plugin-sharp": "^2.4.12",
@@ -24,12 +25,14 @@
     "gatsby-transformer-sharp": "^2.3.18",
     "google-map-react": "^1.1.6",
     "google-maps-react": "^2.0.2",
+    "leaflet": "^1.6.0",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.0",
+    "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.17",
-    "react-dom": "^16.13.0",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
+    "react-leaflet": "^2.6.3",
     "react-scrollspy": "^3.4.2",
     "react-toastr": "^3.0.0",
     "sal.js": "^0.7.4"
