--- a/package.json
+++ b/package.json
@@ -5,38 +5,34 @@
   "version": "0.1.0",
   "author": "Armin Busatlic",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.1",
-    "bootstrap": "^4.4.1",
-    "emailjs-com": "^2.4.1",
-    "gatsby": "^2.19.43",
-    "gatsby-image": "^2.2.43",
-    "gatsby-plugin-manifest": "^2.2.47",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "bootstrap": "^4.5.3",
+    "emailjs-com": "^2.6.4",
+    "gatsby": "^2.27.5",
+    "gatsby-image": "^2.6.0",
+    "gatsby-plugin-manifest": "^2.7.0",
     "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-react-helmet": "^3.1.23",
+    "gatsby-plugin-react-helmet": "^3.5.0",
     "gatsby-plugin-react-leaflet": "^2.0.13",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sass": "^2.1.30",
+    "gatsby-plugin-sass": "^2.6.0",
     "gatsby-plugin-scroll-reveal": "0.0.6",
-    "gatsby-plugin-sharp": "^2.4.12",
+    "gatsby-plugin-sharp": "^2.9.1",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-filesystem": "^2.1.55",
-    "gatsby-source-graphql": "^2.1.34",
-    "gatsby-source-wordpress": "^3.1.71",
-    "gatsby-transformer-remark": "^2.6.58",
-    "gatsby-transformer-sharp": "^2.3.18",
-    "google-map-react": "^1.1.6",
-    "google-maps-react": "^2.0.2",
-    "leaflet": "^1.6.0",
-    "node-sass": "^4.13.1",
+    "gatsby-source-filesystem": "^2.6.1",
+    "gatsby-source-graphql": "^2.9.0",
+    "gatsby-source-wordpress": "^3.6.1",
+    "gatsby-transformer-remark": "^2.11.1",
+    "gatsby-transformer-sharp": "^2.7.0",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0-beta.17",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^5.2.1",
-    "react-leaflet": "^2.6.3",
-    "react-scrollspy": "^3.4.2",
+    "react-scrollspy": "^3.4.3",
     "react-toastr": "^3.0.0",
-    "sal.js": "^0.7.4"
+    "sal.js": "^0.7.8"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
