--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "gatsby-plugin-sharp": "^2.9.1",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.6.1",
-    "gatsby-source-graphql": "^2.9.0",
-    "gatsby-source-wordpress": "^3.6.1",
+    "gatsby-source-wordpress-experimental": "^3.3.1",
     "gatsby-transformer-remark": "^2.11.1",
     "gatsby-transformer-sharp": "^2.7.0",
     "node-sass": "^4.14.1",
