--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-sass": "^2.6.0",
     "gatsby-plugin-scroll-reveal": "0.0.6",
     "gatsby-plugin-sharp": "^2.9.1",
+    "gatsby-plugin-sitemap": "^2.10.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.6.1",
     "gatsby-source-wordpress-experimental": "^3.3.1",
