--- a/package.json
+++ b/package.json
@@ -5,27 +5,27 @@
   "version": "0.1.0",
   "author": "Armin Busatlic",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.1",
-    "bootstrap": "^4.5.3",
-    "gatsby": "^2.27.5",
-    "gatsby-image": "^2.6.0",
-    "gatsby-plugin-manifest": "^2.7.0",
-    "gatsby-plugin-react-helmet": "^3.5.0",
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "bootstrap": "^4.6.0",
+    "gatsby": "^2.32.9",
+    "gatsby-image": "^2.11.0",
+    "gatsby-plugin-manifest": "^2.12.1",
+    "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-react-leaflet": "^2.0.13",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sass": "^2.6.0",
+    "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-scroll-reveal": "0.0.6",
-    "gatsby-plugin-sharp": "^2.9.1",
-    "gatsby-plugin-sitemap": "^2.10.0",
+    "gatsby-plugin-sharp": "^2.14.3",
+    "gatsby-plugin-sitemap": "^2.12.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-filesystem": "^2.6.1",
-    "gatsby-source-wordpress-experimental": "^3.3.1",
-    "gatsby-transformer-remark": "^2.11.1",
-    "gatsby-transformer-sharp": "^2.7.0",
+    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-source-wordpress": "^5.0.0",
+    "gatsby-transformer-remark": "^2.16.1",
+    "gatsby-transformer-sharp": "^2.12.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
-    "react-bootstrap": "^1.4.0",
+    "react-bootstrap": "^1.5.1",
     "react-dom": "^16.14.0",
     "react-helmet": "^5.2.1",
     "react-scrollspy": "^3.4.3",
