--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^16.14.1",
     "react-helmet": "^5.2.1",
     "react-scrollspy": "^3.4.3",
     "react-toastr": "^3.0.0",
@@ -40,8 +40,8 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
+    "build": "gatsby clean && gatsby build",
+    "develop": "gatsby clean && gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "yarn develop",
     "serve": "gatsby serve",
